Fix Overflow

--- a/style.css
+++ b/style.css
@@ -23,9 +23,15 @@ background: linear-gradient(75deg, rgba(255,240,164,1) 0%, rgba(241,104,150,1) 3
 .documentation-carousel{
     width: 700px;
     height: 450px;
+    overflow-x: auto;
 }
 
 .documentation-carousel img{
     width: 700px;
     height: 450px;
+    overflow-x: hidden;
+}
+
+.skill-project-container{
+    overflow-x: auto;
 }
